# poetry_plugin_limerick

./: README.md  pyproject.toml
poetry_plugin_limerick/: cc.py  command.py
poetry_plugin_limerick/limerick/: find.py  generate.py  main.py  prompt.py  replay.py  utils.py  vcs.py
