[tool.poetry]
name = "poetry-plugin-limerick"
version = "0.1.1"
description = "Plug cookiecutter into poetry!"
authors = ["landowark <lando.wark@gmail.com>"]
readme = "README.md"
packages = [
            { include = "poetry_plugin_limerick" },
            { include = "poetry_plugin_limerick/cookiecutter" },
        ]


[tool.poetry.dependencies]
python = "^3.10"
binaryornot = "^0.4.4"
Jinja2 = "^3"
click = "^8"
pyyaml = "^5.3.1"
jinja2-time = "^0.2.0"
python-slugify = "^4.0.0"
requests = "^2.23.0"
dulwich = "^0.20.50"


[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
poetry = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."poetry.application.plugin"]
limerick = "poetry_plugin_limerick.plugins:LimerickApplicationPlugin"
